<resources>
    <string name="app_name">Blood Sugar Diary</string>


    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="addA">Add a new entry</string>
    <string name="addAA">Add at least one entry to see content here.</string>
    <string name="addedA">Inserted</string>
    <string name="allA">All</string>
    <string name="analyz">Analyze</string>
    <string name="app_finger">Put your finger here</string>
    <string name="app_framebu">SIM</string>
    <string name="app_frameinf">Blood Sugar Information</string>
    <string name="app_high">High Blood Sugar</string>
    <string name="app_high_text">High Blood Sugar is a value greater than 140/90 mmHg for an adult. High blood sugar increases the risk for a stroke or heart disease.</string>
    <string name="app_ideal">Ideal Blood Sugar</string>
    <string name="app_ideal_text">Ideal Blood Sugar is a value greater than 90/60 mmHg and less than 120/80 mmHg for an adult.</string>
    <string name="app_info1msg">Oops! Something went wrong. Please restart the app and try it again. If it does not help your smartphone does not support features which this app needs, sorry!</string>
    <string name="app_info1title">Error</string>
    <string name="app_info3msg">You have already rated this app!</string>
    <string name="app_low">Low Blood Sugar</string>
    <string name="app_low_text">Low Blood Sugar is a value less than 90/60 mmHg for an adult. Low blood sugar lower the risk of a stroke or heart disease.</string>
    <string name="app_pre">Pre High Blood Sugar</string>
    <string name="app_pre_text">Pre High Blood Sugar is a value greater than 120/80 mmHg and less than 140/90 mmHg for an adult.</string>
    <string name="app_privacy">http://130.255.77.192/policy/</string>
    <string name="app_ratebutton1">Send</string>
    <string name="app_ratebutton2">Finish</string>
    <string name="app_ratebutton3">Take me to the store</string>
    <string name="app_ratemsg">Tap the number of stars you would give this app on a scale from 1-5.</string>
    <string name="app_ratemsg1">Thank you for your rating! Please tell us how we can improve our app.</string>
    <string name="app_ratemsg2">How can we improve our app?</string>
    <string name="app_ratetitle">How would you rate this app?</string>
    <string name="app_remsa">Save</string>
    <string name="app_startapp_id">201274700</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="avgsym">ø</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_more">More</string>
    <string name="btn_share">Share</string>
    <string name="btn_rateus">RateUs</string>
    <string name="btn_policy">Privacy Policy</string>
    <string name="btn_start">Start</string>
    <string name="calena">Open calendar</string>
    <string name="calenah">Add a new calendar event</string>
    <string name="calenaha">Select date</string>
    <string name="calenahb">Select time</string>
    <string name="calenahc">Schedule event every day?</string>
    <string name="calenahcd">Error: Invalid date or time.</string>
    <string name="calenb">Calendar entry</string>
    <string name="cancelv">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="csvexport">Export CSV</string>
    <string name="csvexporta">CSV export successful.</string>
    <string name="dataA">Diary</string>
    <string name="dateA">Date</string>
    <string name="dateAA">DATE</string>
    <string name="dayA">Day</string>
    <string name="delA">Delete: Hold down on a line</string>
    <string name="delq">Are you sure that you want to delete this entry?</string>
    <string name="diaAA">DIASTOLIC</string>
    <string name="diaAAA">DIA</string>
    <string name="diagramA">Diagram</string>
    <string name="diaryA">Blood Pressure Diary</string>
    <string name="diastolicA">Diastolic</string>
    <string name="enA">Entries</string>
    <string name="getthis">Check out other apps</string>
    <string name="goodA">Good</string>
    <string name="goodB">Bad</string>
    <string name="gtreA">Need more available entries? Watch this short video!</string>
    <string name="hourA">Hour</string>
    <string name="infonobn">The result values are simulated!</string>
    <string name="infosc">Info</string>
    <string name="ismorA">Get more</string>
    <string name="lefentrA">Available entries</string>
    <string name="menaa">Blood Pressure entry</string>
    <string name="minv">/min</string>
    <string name="mmhgv">mmHg</string>
    <string name="monthA">Month</string>
    <string name="noEnA">You have no more available entries.</string>
    <string name="noviA">Sorry, there is no video available. Please try it again in a few seconds.</string>
    <string name="noviAa">Sorry, there is no video available. As a gift, however, you will receive a free entry.</string>
    <string name="opencal">Click to open the app.</string>
    <string name="opencalx">Use the Blood Pressure Diary App</string>
    <string name="opencaly">The event will be added to your calendar ...</string>
    <string name="opencalyy">The event was successfully added to your calendar!</string>
    <string name="opencalyyy">Sorry, but the event could not be added to your calendar.</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pulAA">PULSE</string>
    <string name="pulAAA">PUL</string>
    <string name="pulseAA">Pulse</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="searchfield">Search for tags</string>
    <string name="share_text">Download this App now!</string>
    <string name="statt">Statistic</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sysAA">SYSTOLIC</string>
    <string name="sysAAA">SYS</string>
    <string name="systolicA">Systolic</string>
    <string name="tagstextt">Tags, separated by a comma</string>
    <string name="timeAA">TIME</string>
    <string name="todayA">Today</string>
    <string name="whileaddingA">Insert</string>
    <string name="yearA">Year</string>
    <string name="app_chart">Blood Sugar Diagram</string>


    <string name="bannerAds">ca-app-pub-3940256099942544/63009781110</string>
    <string name="fullScreenAds">ca-app-pub-3940256099942544/10331737120</string>
    <string name="admob_appid">ca-app-pub-1264280090355725~5973073995</string>


</resources>