<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dailog_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <View
        android:id="@+id/thecenterobject"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/app_ratetitle"
        android:textColor="#3e3e3e"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/s_gra" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="2.5dp"
            android:src="@drawable/s_gra" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/s_gra" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="-2.5dp"
            android:src="@drawable/s_gra" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="-5dp"
            android:src="@drawable/s_gra" />
    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stars"
        android:layout_alignLeft="@+id/header"
        android:layout_alignRight="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/app_ratemsg"
        android:textColor="#a6a6a7"
        android:textSize="12dp" />

    <View
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/info"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:visibility="gone" />

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seperator"
        android:layout_alignLeft="@+id/header"
        android:layout_alignRight="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/app_ratemsg1"
        android:textColor="#3e3e3e"
        android:textSize="13dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/info1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:background="#ededed"
        android:gravity="left|center_vertical|center_horizontal|center"
        android:hint="@string/app_ratemsg2"
        android:padding="10dp"
        android:textColorHint="#808080"
        android:textSize="12dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/buttons_star1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_no_send_msg"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/app_ratebutton2"
            android:textColor="@color/darkGrey"
            android:textSize="12dp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_send_msg"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/button_gre"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/app_ratebutton1"
            android:textColor="#ffffff"
            android:textSize="12dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_star5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_no_send_msg1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/app_ratebutton2"
            android:textColor="@color/darkGrey"
            android:textSize="12dp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_send_msg1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/button_gre"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/app_ratebutton3"
            android:textColor="#ffffff"
            android:textSize="12dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
